--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <ul>
     <li><a routerLinkActive="active" routerLink="/" [routerLinkActiveOptions]="{exact:true}">Home</a></li>
-    <li><a routerLink="/sign-in" routerLinkActive="active">Sign In</a></li>
-    <li><a routerLink="#contact" routerLinkActive="active">Sign Out</a></li>
-    <li><a routerLink="/body" routerLinkActive="active">Body</a></li>
+    <li><a routerLinkActive="active" routerLink="/sign-in">Sign-In</a></li>
+    <li><a href="#contact">Logout</a></li>
+
 </ul>
