--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -1,13 +1,30 @@
-<div class = "container">
+<!--<div class = "container">
     <div class="wrapper">
-        <form action="" method="post" name="Login_Form" class="form-signin">
+        <form name="Login_Form" class="form-signin" #form="ngForm" (submit)="loginTD(form)">
             <h3 class="form-signin-heading">Welcome Back! Please Sign In</h3>
             <hr class="colorgraph"><br>
 
-            <input type="text" class="form-control" name="Username" placeholder="Username" required="" autofocus="" />
-            <input type="password" class="form-control" name="Password" placeholder="Password" required=""/>
+            <input type="text" class="form-control" name="username" placeholder="Username" required ngModel #username="ngModel" />
+            <input type="password" class="form-control" name="password" placeholder="Password" required ngModel #password="ngModel"/>
 
             <button class="btn btn-lg btn-primary btn-block"  name="Submit" value="Login" type="Submit">Login</button>
+        </form>
+    </div>
+</div>
+
+<hr/>-->
+
+<div class = "container">
+    <div class="wrapper">
+        <form class="form-signin" [formGroup]="signinForm" (submit)="loginRF()">
+            <h3 class="form-signin-heading">Welcome Back! Please Sign In</h3>
+            <input type="email" class="form-control" formControlName="email"  placeholder="Email Address" />
+            <input type="password" class="form-control" formControlName="password" placeholder="Password"/>
+            <div *ngIf="signinForm.get('email').getError('required')"
+            >
+                error
+            </div>
+            <button class="btn btn-lg btn-primary btn-block" value="Login" type="submit" [disabled]="!signinForm.valid">Login</button>
         </form>
     </div>
 </div>
